# tree-sitter-slk

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  grammar.js  package.json  setup.py  tree-sitter.json
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
