[package]
name = "tree-sitter-slk"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
    "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.25.8"

[build-dependencies]
cc = "1.2.30"

[dev-dependencies]
tree-sitter = "0.25.8"
